--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 		</div>
 		<div class="col-4" id="bal">
 			<p>CRONICA FC BARCELONA-ALAVES</p>
-			<img src="https://www.fcbarcelonanoticias.com/uploads/s1/12/43/50/5/cronica-barcelona-alaves.jpeg" width="300">
+			<img src="https://www.fcbarcelonanoticias.com/uploads/s1/12/43/50/5/cronica-barcelona-alaves.jpeg" width="300em">
 			<p>El Barcelona se lleva un partido con una clara victoria por 5-1 frente al Alaves. Los de Koeman manejaron el partido de principio a fin y los jovenes tiraron del carro en esta nueva victoria. Puede que estemos en el comienzo de el nuevo BABY BARSA</p>
 		</div>
 	</div>
